--- a/MyFirstMobileApp.csproj
+++ b/MyFirstMobileApp.csproj
@@ -62,8 +62,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="ViewViewModels\Main\MainView.xaml.cs">
+	    <DependentUpon>MainView.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="ViewViewModels\Main\MainView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Folder Include="Models\" />
-	  <Folder Include="ViewViewModels\" />
 	</ItemGroup>
 
 </Project>
