--- a/MyFirstMobileApp.csproj
+++ b/MyFirstMobileApp.csproj
@@ -74,6 +74,9 @@
 	  <MauiXaml Update="ViewViewModels\AppImages\URIImagesXAML\URIImagesView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ViewViewModels\CollectionsContents\CollectionImageContents\CollectionImageView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ViewViewModels\CollectionsContents\CollectionsMenuView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -104,7 +107,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Resources\Images\NewFolder\" />
+	  <Folder Include="Resources\Images\StarWarsCharacters\" />
 	</ItemGroup>
 
 </Project>
