--- a/MyFirstMobileApp.csproj
+++ b/MyFirstMobileApp.csproj
@@ -80,6 +80,9 @@
 	  <MauiXaml Update="ViewViewModels\CollectionsContents\CollectionsMenuView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ViewViewModels\CollectionsContents\CollectionsUpdatable\CollectionsButtonsView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ViewViewModels\CollectionsContents\SWMoviesCollection\StarWarsMoviesView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
