--- a/MyFirstMobileApp.csproj
+++ b/MyFirstMobileApp.csproj
@@ -98,6 +98,12 @@
 	  <MauiXaml Update="ViewViewModels\ControlsCollection\EntryControl\Entry\EntryView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ViewViewModels\ControlsCollection\PickerControl\PickerResults\PickerResultsView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ViewViewModels\ControlsCollection\PickerControl\Picker\PickerView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ViewViewModels\ControlsCollection\SliderControl\SliderView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
