Finished DatePickerXAML, yet to work on DatePickerVM

--- a/MyFirstMobileApp.csproj
+++ b/MyFirstMobileApp.csproj
@@ -92,6 +92,12 @@
 	  <MauiXaml Update="ViewViewModels\ControlsCollection\ControlsView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ViewViewModels\ControlsCollection\DatePickerControl\DatePickerView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ViewViewModels\ControlsCollection\DatePickerControl\DatePickerXAML\DatePickerXAMLView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ViewViewModels\ControlsCollection\EntryControl\EntryResults\EntryResultsView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -140,6 +146,10 @@
 	  <MauiXaml Update="ViewViewModels\Layouts\StackLayoutContents\StackLayoutView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="ViewViewModels\ControlsCollection\DatePickerControl\DatePickerVM\" />
 	</ItemGroup>
 
 </Project>
