--- a/.gitignore
+++ b/.gitignore
@@ -132,8 +132,8 @@ _ReSharper*/
 *.[Rr]e[Ss]harper
 *.DotSettings.user
 
-# TeamCity is a build add-in
-_TeamCity*
+# TeamTrilogy is a build add-in
+_TeamTrilogy*
 
 # DotCover is a Code Coverage Tool
 *.dotCover
